--- a/src/main/resources/assets/exgregilo/lang/en_US.lang
+++ b/src/main/resources/assets/exgregilo/lang/en_US.lang
@@ -1,3 +1,4 @@
 exgregilo.advancedsieve.name=Advanced Sieve
+exgregilo.basicsieve.name=Basic Sieve
 tile.exgregilo.gem_sand.name=Gem Sand
 item.exgregilo.gemshards.name=Gem Shards
