Add heavy sieve

--- a/src/main/resources/assets/exgregilo/lang/en_US.lang
+++ b/src/main/resources/assets/exgregilo/lang/en_US.lang
@@ -1,4 +1,30 @@
 exgregilo.advancedsieve.name=Advanced Sieve
 exgregilo.basicsieve.name=Basic Sieve
+exgregilo.heavysieve.name=Heavy Sieve
 tile.exgregilo.gem_sand.name=Gem Sand
+tile.exgregilo.dust.name=Dust
+tile.exgregilo.compressedGravel1x.name=Compressed Gravel
+tile.exgregilo.compressedGravel2x.name=Double Compressed Gravel
+tile.exgregilo.compressedGravel3x.name=Triple Compressed Gravel
+tile.exgregilo.compressedGravel4x.name=Quadruple Compressed Gravel
+tile.exgregilo.compressedGravel5x.name=Quintuple Compressed Gravel
+tile.exgregilo.compressedGravel6x.name=Sextuple Compressed Gravel
+tile.exgregilo.compressedGravel7x.name=Septuple Compressed Gravel
+tile.exgregilo.compressedGravel8x.name=Octuple Compressed Gravel
+tile.exgregilo.compressedSand1x.name=Compressed Sand
+tile.exgregilo.compressedSand2x.name=Double Compressed Sand
+tile.exgregilo.compressedSand3x.name=Triple Compressed Sand
+tile.exgregilo.compressedSand4x.name=Quadruple Compressed Sand
+tile.exgregilo.compressedSand5x.name=Quintuple Compressed Sand
+tile.exgregilo.compressedSand6x.name=Sextuple Compressed Sand
+tile.exgregilo.compressedSand7x.name=Septuple Compressed Sand
+tile.exgregilo.compressedSand8x.name=Octuple Compressed Sand
+tile.exgregilo.compressedDust1x.name=Compressed Dust
+tile.exgregilo.compressedDust2x.name=Double Compressed Dust
+tile.exgregilo.compressedDust3x.name=Triple Compressed Dust
+tile.exgregilo.compressedDust4x.name=Quadruple Compressed Dust
+tile.exgregilo.compressedDust5x.name=Quintuple Compressed Dust
+tile.exgregilo.compressedDust6x.name=Sextuple Compressed Dust
+tile.exgregilo.compressedDust7x.name=Septuple Compressed Dust
+tile.exgregilo.compressedDust8x.name=Octuple Compressed Dust
 item.exgregilo.gemshards.name=Gem Shards
