Add electric crucible, greg's crucible, and fix issues

--- a/src/main/resources/assets/exgregilo/lang/en_US.lang
+++ b/src/main/resources/assets/exgregilo/lang/en_US.lang
@@ -2,6 +2,7 @@ exgregilo.advancedsieve.name=Advanced Sieve
 exgregilo.basicsieve.name=Basic Sieve
 exgregilo.heavysieve.name=Heavy Sieve
 tile.exgregilo.gem_sand.name=Gem Sand
+tile.exgregilo.greg_crucible.name=Greg's Crucible
 tile.exgregilo.dust.name=Dust
 tile.exgregilo.compressedGravel1x.name=Compressed Gravel
 tile.exgregilo.compressedGravel2x.name=Double Compressed Gravel
